--- a/pages/country.html
+++ b/pages/country.html
@@ -47,7 +47,7 @@
             </div>
             <div class="buttons">
                 <a href="">احجز الان</a>
-                <a href="">استكشف</a>
+                <a href="explorer.html">استكشف</a>
             </div>
         </div>
         <div class="card">
@@ -73,7 +73,7 @@
             </div>
             <div class="buttons">
                 <a href="">احجز الان</a>
-                <a href="">استكشف</a>
+                <a href="explorer.html">استكشف</a>
             </div>
         </div>
         <div class="card">
@@ -86,7 +86,7 @@
             </div>
             <div class="buttons">
                 <a href="">احجز الان</a>
-                <a href="">استكشف</a>
+                <a href="explorer.html">استكشف</a>
             </div>
         </div>
         <div class="card">
@@ -99,7 +99,7 @@
             </div>
             <div class="buttons">
                 <a href="">احجز الان</a>
-                <a href="">استكشف</a>
+                <a href="explorer.html">استكشف</a>
             </div>
         </div>
         <div class="card">
@@ -112,7 +112,7 @@
             </div>
             <div class="buttons">
                 <a href="">احجز الان</a>
-                <a href="">استكشف</a>
+                <a href="explorer.html">استكشف</a>
             </div>
         </div>
         <div class="card">
@@ -125,7 +125,7 @@
             </div>
             <div class="buttons">
                 <a href="">احجز الان</a>
-                <a href="">استكشف</a>
+                <a href="explorer.html">استكشف</a>
             </div>
         </div>
         <div class="card">
@@ -138,7 +138,7 @@
             </div>
             <div class="buttons">
                 <a href="">احجز الان</a>
-                <a href="">استكشف</a>
+                <a href="explorer.html">استكشف</a>
             </div>
         </div>
         <div class="card">
@@ -151,7 +151,7 @@
             </div>
             <div class="buttons">
                 <a href="">احجز الان</a>
-                <a href="">استكشف</a>
+                <a href="explorer.html">استكشف</a>
             </div>
         </div>
     </section>
